--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -206,8 +206,7 @@ dependencies {
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.flipper'
 
-    def multidex_version = "2.0.1"
-    implementation 'androidx.multidex:multidex:$multidex_version'
+    implementation "androidx.multidex:multidex:2.0.1"
   }
 
     if (enableHermes) {
